--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
                     <div class="wrap d-md-flex">
-                        <div class="img" style="background-image: url(/sample/netflix.jpg);">
+                        <div class="img" style="background-image: url(Img1.jpg);">
                         </div>
                         <div class="login-wrap p-4 p-md-5">
                             <div class="d-flex">
